--- a/RaalProjectPreview/Views/Customer/Index.cshtml
+++ b/RaalProjectPreview/Views/Customer/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-<h2>Панель покупателя</h2>
+﻿<h2>Панель покупателя</h2>
 <div id="customerPanelVue">
     <div class="btn-group" role="group">
         <button type="button" v-on:click="ShowMyOrders()" class="btn btn-secondary">Мои заказы</button>
