--- a/RaalProjectPreview/Views/Shared/_Layout.cshtml
+++ b/RaalProjectPreview/Views/Shared/_Layout.cshtml
@@ -9,31 +9,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbarNav">
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
-                @if (Session["Authed"] == null || (bool)Session["Authed"] == false)
-                {
-                    <li class="nav-item">
-                        <a class="nav-link" href="/Home/Login">LogIn</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/Home/SignIn">SignIn</a>
-                    </li>
-                }
-                else
-                {
-                    <li class="nav-item">
-                        <a class="nav-link" href="/Home/LogOut">LogOut</a>
-                    </li>
-                }
-            </ul>
-        </div>
-    </nav>
     <div class="container-fluid body-content">
         @RenderBody()
         <hr />
