--- a/RaalProjectPreview/Views/Customer/Index.cshtml
+++ b/RaalProjectPreview/Views/Customer/Index.cshtml
@@ -1,4 +1,53 @@
 ﻿<h2>Панель покупателя</h2>
+<link rel="stylesheet" type="text/css" href="~/Content/Css/CustomerPanel.css" />
+<script type="text/x-template" id="items-template">
+    <table>
+        <thead>
+            <tr>
+                <th v-for="key in columns"
+                    v-on:click="sortBy(key)"
+                    :class="{ active: sortKey == key }">
+                    {{ key | capitalize }}
+                    <span class="arrow" :class="sortOrders[key] > 0 ? 'asc' : 'dsc'">
+                    </span>
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr v-for="entry in filteredItems">
+                <td v-for="key in columns">
+                    {{ entry[key] }}
+                </td>
+                <td><button type="button" class="btn btn-default" v-on:click="customerPanelVue.AddItemToCase(entry)">add to case</button></td>
+            </tr>
+        </tbody>
+    </table>
+</script>
+<script type="text/x-template" id="orders-template">
+    <table>
+        <thead>
+            <tr>
+                <th v-for="key in columns"
+                    v-on:click="sortBy(key)"
+                    :class="{ active: sortKey == key }">
+                    {{ key | capitalize }}
+                    <span class="arrow" :class="sortOrders[key] > 0 ? 'asc' : 'dsc'">
+                    </span>
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr v-for="entry in filteredOrders">
+                <td v-for="key in columns">
+                    {{ entry[key] }}
+                </td>
+                <td><button type="button" class="btn btn-default text-primary" v-on:click="customerPanelVue.CloseOrder(entry)">Close</button></td>
+            </tr>
+        </tbody>
+    </table>
+</script>
 <div id="customerPanelVue">
     <div class="btn-group" role="group">
         <button type="button" v-on:click="ShowMyOrders()" class="btn btn-secondary">Мои заказы</button>
@@ -6,40 +55,12 @@
         <button type="button" v-on:click="GetMyCase()" class="btn btn-secondary">Корзина</button>
     </div>
     <div style="margin-top: .4em;" class="row">
-        <div class="col-md-8">
-            <div class="table-responsive">
-                <table class="table table-striped table-bordered">
-                    <thead>
-                        <tr>
-                            <th></th>
-                        </tr>
-                        <tr class="success">
-                            <th class="success" colspan="3">Товары</th>
-                            <th></th>
-                        </tr>
-                        <tr>
-                            <th>#</th>
-                            <th>Name</th>
-                            <th>Price</th>
-                            <th>Category</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr v-for="(item, index) in Items">
-                            <td>{{index}}</td>
-                            <td>{{item.Name}}</td>
-                            <td>{{item.Price}}</td>
-                            <td>{{item.Category}}</td>
-                            <td>
-                                <button class="btn btn-secondary" v-on:click="AddItemToCase(index)" type="button">
-                                    +
-                                </button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+        <div style="margin-top: .2em" class="col-md-8">
+            <dfn>Товары</dfn>
+            <item-grid :items="Items"
+                       :columns="GridItemsCols"
+                       :filter-key="searchQuery">
+            </item-grid>
         </div>
         <div class="col-md-offset-1 col-md-3">
             <div class="card">
@@ -57,45 +78,12 @@
             </div>
         </div>
     </div>
-
-    <hr />
-    <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" v-model="OnlyNewOrders">
-        <label class="form-check-label" for="flexSwitchCheckDefault">Show only new orders</label>
-    </div>
-    <div class="table-responsive">
-        <table class="table table-striped table-bordered">
-            <thead>
-                <tr>
-                    <th></th>
-                </tr>
-                <tr class="success">
-                    <th class="success" colspan="4">Данные заказов</th>
-                </tr>
-                <tr>
-                    <th>#</th>
-                    <th>Order date</th>
-                    <th>Shipment date</th>
-                    <th>Order number</th>
-                    <th>Status</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr v-for="(order, index) in filteredOrderList">
-                    <td>{{index}}</td>
-                    <td>{{order.OrderDate}}</td>
-                    <td>{{order.ShipmentDate}}</td>
-                    <td>{{order.OrderNumber}}</td>
-                    <td>{{order.Status}}</td>
-                    <td>
-                        <button class="btn btn-warning" v-on:click="CloseOrder(index)" type="button">
-                            Close
-                        </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+    <div style="margin-top: .2em">
+        <dfn>Заказы</dfn>
+        <order-grid :orders="Orders"
+                    :columns="GridOrdersCols"
+                    :filter-key="searchQuery">
+        </order-grid>
     </div>
     <div class="modal" id="alertModal" tabindex="-1" role="dialog" aria-labelledby="alertModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
