--- a/RaalProjectPreview/Views/Admin/Index.cshtml
+++ b/RaalProjectPreview/Views/Admin/Index.cshtml
@@ -1,5 +1,200 @@
 ﻿<h3>Панель администратора</h3>
 <link rel="stylesheet" type="text/css" href="~/Content/Css/AdminPanel.css" />
+
+<div id="adminPanelVue">
+    <alert-modal :msg="alertMsg"
+                 :stl="alertClass"
+                 v-on:modal-closed="CloseModal()"
+                 v-on:modal-submit="CloseModal()">
+    </alert-modal>
+    <user-modal :user="NewUser"
+                v-on:modal-closed="CloseModal()"
+                v-on:modal-submit="CloseModal()">
+    </user-modal>
+    <item-modal :item="NewItem"
+                v-on:modal-closed="CloseModal()"
+                v-on:modal-submit="CloseModal()">
+    </item-modal>
+
+    <div class="btn-group" role="group">
+        <button type="button" v-on:click="ShowAllItems()" class="btn btn-secondary">Показать товары</button>
+        <button type="button" v-on:click="ShowAllUsers()" class="btn btn-secondary">Показать покупателей</button>
+        <button type="button" v-on:click="ShowAllOrders()" class="btn btn-secondary">Показать заказы</button>
+    </div>
+    <div class="btn-group" role="group">
+        <button type="button" class="btn btn-secondary" data-toggle="modal" v-on:click="StartAddNewItem()">Добавить товар</button>
+        <button type="button" class="btn btn-secondary" data-toggle="modal" v-on:click="StartAddNewUser()">Добавить покупателя</button>
+    </div>
+
+    <div style="margin-top: .2em">
+        <dfn>Пользователи</dfn>
+        <form id="searchuser">
+            Поиск <input name="query" v-model="searchQueryUser" />
+        </form>
+        <user-grid :users="Users"
+                   :columns="GridUsersCols"
+                   :filter-key="searchQueryUser">
+        </user-grid>
+    </div>
+    <div style="margin-top: .2em">
+        <dfn>Товары</dfn>
+        <form id="searchitem">
+            Поиск <input name="query" v-model="searchQueryItem" />
+        </form>
+        <item-grid :items="Items"
+                   :columns="GridItemsCols"
+                   :filter-key="searchQueryItem">
+        </item-grid>
+    </div>
+    <div style="margin-top: .2em">
+        <dfn>Заказы</dfn>
+        <form id="searchorder">
+            Поиск <input name="query" v-model="searchQueryOrder" />
+        </form>
+        <order-grid :orders="Orders"
+                    :columns="GridOrdersCols"
+                    :filter-key="searchQueryOrder">
+        </order-grid>
+    </div>
+    <div class="modal" id="alertModal" tabindex="-1" role="dialog" aria-labelledby="alertModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-center" id="alertModalLabel">Server response</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <h4 v-bind:class="[alertClass]" class="text-center">
+                        {{alertMsg}}
+                    </h4>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script type="text/x-template" id="usermodal-template">
+    <template v-if="adminPanelVue.showModalUser">
+        <transition name="modal">
+            <div class="modal-mask">
+                <div class="modal-wrapper">
+                    <div class="modal-container">
+                        <div class="modal-header">
+                            <slot name="header">
+                                <h5 class="modal-title text-center">Server response</h5>
+                                <button type="button" class="close" v-on:click="Close()" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </slot>
+                        </div>
+                        <div class="modal-body">
+                            <slot name="body">
+                                <label for="userModal_Name">Имя</label>
+                                <input id="userModal_Name" class="form-control" v-model="user.Name" />
+                                <label for="userModal_Code">Код</label>
+                                <input id="userModal_Code" class="form-control" v-model="user.Code" />
+                                <label for="userModal_Address">Адрес</label>
+                                <input id="userModal_Address" class="form-control" v-model="user.Address" />
+                                <label for="userModal_Discount">Скидка</label>
+                                <input id="userModal_Discount" class="form-control" v-model="user.Discount" />
+                                <hr />
+                                <label for="userModal_Login">Логин</label>
+                                <input id="userModal_Login" class="form-control" v-model="user.Login" />
+                                <label for="userModal_PasswordHash">Хэш пароля</label>
+                                <input id="userModal_PasswordHash" class="form-control" v-model="user.PasswordHash" />
+                                <hr />
+                                <label for="userModal_ClientRole">Роль (0-админ/1-покупатель)</label>
+                                <input id="userModal_ClientRole" class="form-control" v-model="user.ClientRole" />
+                            </slot>
+                        </div>
+                        <div class="modal-footer">
+                            <slot name="footer">
+                                <button class="modal-default-button" v-on:click="CompleteUser()">
+                                    OK
+                                </button>
+                            </slot>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </transition>
+    </template>
+</script>
+<script type="text/x-template" id="itemmodal-template">
+    <template v-if="adminPanelVue.showModalItem">
+        <transition name="modal">
+            <div class="modal-mask">
+                <div class="modal-wrapper">
+                    <div class="modal-container">
+                        <div class="modal-header">
+                            <slot name="header">
+                                <h5 class="modal-title text-center">Server response</h5>
+                                <button type="button" class="close" v-on:click="Close()" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </slot>
+                        </div>
+                        <div class="modal-body">
+                            <slot name="body">
+                                <label for="itemModal_Name">Название</label>
+                                <input id="itemModal_Name" class="form-control" v-model="item.Name" />
+
+                                <label for="itemModal_Price">Цена</label>
+                                <input id="itemModal_Price" class="form-control" v-model="item.Price" />
+
+                                <label for="itemModal_Category">Категория</label>
+                                <input id="itemModal_Category" class="form-control" v-model="item.Category" />
+                            </slot>
+                        </div>
+                        <div class="modal-footer">
+                            <slot name="footer">
+                                <button class="modal-default-button" v-on:click="CompleteItem()">
+                                    OK
+                                </button>
+                            </slot>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </transition>
+    </template>
+</script>
+<script type="text/x-template" id="alertmodal-template">
+    <template v-if="adminPanelVue.showModalAlert">
+        <transition name="modal">
+            <div class="modal-mask">
+                <div class="modal-wrapper">
+                    <div class="modal-container">
+                        <div class="modal-header">
+                            <slot name="header">
+                                <h5 class="modal-title text-center">Server response</h5>
+                                <button type="button" class="close" v-on:click="Close()" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </slot>
+                        </div>
+                        <div class="modal-body">
+                            <slot name="body">
+                                <h3 v-bind:class="stl">{{msg}}</h3>
+                            </slot>
+                        </div>
+                        <div class="modal-footer">
+                            <slot name="footer">
+                                <button class="modal-default-button" v-on:click="Close()">
+                                    OK
+                                </button>
+                            </slot>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </transition>
+    </template>
+</script>
 <script type="text/x-template" id="users-template">
     <table>
         <thead>
@@ -78,120 +273,5 @@
         </tbody>
     </table>
 </script>
-<div id="adminPanelVue">
-    <div class="btn-group" role="group">
-        <button type="button" v-on:click="ShowAllItems()" class="btn btn-secondary">Показать товары</button>
-        <button type="button" v-on:click="ShowAllUsers()" class="btn btn-secondary">Показать покупателей</button>
-        <button type="button" v-on:click="ShowAllOrders()" class="btn btn-secondary">Показать заказы</button>
-    </div>
-    <div class="btn-group" role="group">
-        <button type="button" class="btn btn-secondary" data-toggle="modal" v-on:click="StartAddNewItem()">Добавить товар</button>
-        <button type="button" class="btn btn-secondary" data-toggle="modal" v-on:click="StartAddNewUser()">Добавить покупателя</button>
-    </div>
-
-    <div style="margin-top: .2em">
-        <dfn>Пользователи</dfn>
-        <user-grid :users="Users"
-                   :columns="GridUsersCols"
-                   :filter-key="searchQuery">
-        </user-grid>
-    </div>
-    <div style="margin-top: .2em">
-        <dfn>Товары</dfn>
-        <item-grid :items="Items"
-                   :columns="GridItemsCols"
-                   :filter-key="searchQuery">
-        </item-grid>
-    </div>
-    <div style="margin-top: .2em">
-        <dfn>Заказы</dfn>
-        <order-grid :orders="Orders"
-                   :columns="GridOrdersCols"
-                   :filter-key="searchQuery">
-        </order-grid>
-    </div>
-    <div class="modal" id="AddUserModal" tabindex="-1" role="dialog" aria-labelledby="AddUserModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="AddUserModalLabel">Пользователь</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <label for="userModal_Name">Имя</label>
-                    <input id="userModal_Name" class="form-control" v-model="NewUser.Name" />
-                    <label for="userModal_Code">Код</label>
-                    <input id="userModal_Code" class="form-control" v-model="NewUser.Code" />
-                    <label for="userModal_Address">Адрес</label>
-                    <input id="userModal_Address" class="form-control" v-model="NewUser.Address" />
-                    <label for="userModal_Discount">Скидка</label>
-                    <input id="userModal_Discount" class="form-control" v-model="NewUser.Discount" />
-                    <hr />
-
-                    <label for="userModal_Login">Логин</label>
-                    <input id="userModal_Login" class="form-control" v-model="NewUser.Login" />
-                    <label for="userModal_PasswordHash">Хэш пароля</label>
-                    <input id="userModal_PasswordHash" class="form-control" v-model="NewUser.PasswordHash" />
-                    <hr />
-
-                    <label for="userModal_ClientRole">Роль (0-админ/1-покупатель)</label>
-                    <input id="userModal_ClientRole" class="form-control" v-model="NewUser.ClientRole" />
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" v-on:click="CompleteUser()" class="btn btn-primary">Ok</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal" id="AddItemModal" tabindex="-1" role="dialog" aria-labelledby="AddItemModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="AddItemModalLabel">Товар</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <label for="itemModal_Name">Название</label>
-                    <input id="itemModal_Name" class="form-control" v-model="NewItem.Name" />
-
-                    <label for="itemModal_Price">Цена</label>
-                    <input id="itemModal_Price" class="form-control" v-model="NewItem.Price" />
-
-                    <label for="itemModal_Category">Категория</label>
-                    <input id="itemModal_Category" class="form-control" v-model="NewItem.Category" />
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" v-on:click="CompleteItem()" class="btn btn-primary">Ok</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal" id="alertModal" tabindex="-1" role="dialog" aria-labelledby="alertModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title text-center" id="alertModalLabel">Server response</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <h4 v-bind:class="[alertClass]" class="text-center">
-                        {{alertMsg}}
-                    </h4>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
 <script type="text/javascript" src="~/Scripts/Vue/AdminPanelVue.js"></script>
+<script type="text/javascript" src="~/Scripts/Vue/AdminPanelModalVue.js"></script>
