--- a/RaalProjectPreview/Views/Customer/Index.cshtml
+++ b/RaalProjectPreview/Views/Customer/Index.cshtml
@@ -1,5 +1,87 @@
 ﻿<h2>Панель покупателя</h2>
 <link rel="stylesheet" type="text/css" href="~/Content/Css/CustomerPanel.css" />
+
+<div id="customerPanelVue">
+    <alert-modal :msg="alertMsg"
+                 :stl="alertClass"
+                 v-on:modal-closed="CloseModal()"
+                 v-on:modal-submit="CloseModal()">
+    </alert-modal>
+    <div class="btn-group" role="group">
+        <button type="button" v-on:click="ShowMyOrders()" class="btn btn-secondary">Мои заказы</button>
+        <button type="button" v-on:click="GetItemList()" class="btn btn-secondary">Список товаров</button>
+        <button type="button" v-on:click="GetMyCase()" class="btn btn-secondary">Корзина</button>
+    </div>
+    <div style="margin-top: .4em;" class="row">
+        <div style="margin-top: .2em" class="col-md-8">
+            <dfn>Товары</dfn>
+            <form id="searchitem">
+                Поиск <input name="query" v-model="searchQueryItem" />
+            </form>
+            <item-grid :items="Items"
+                       :columns="GridItemsCols"
+                       :filter-key="searchQueryItem">
+            </item-grid>
+        </div>
+        <div class="col-md-offset-1 col-md-3">
+            <div class="card">
+                <div class="card-header">
+                    Корзина
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li v-for="(item, CaseItems) in CaseItems" class="list-group-item">
+                        {{item.Name}} price: {{item.Price}}$
+                    </li>
+                </ul>
+                <div class="card-body">
+                    <button type="button" class="card-link" v-on:click="CreateOrder()">Заказать</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div style="margin-top: .2em">
+        <dfn>Заказы</dfn>
+        <form id="searchorder">
+            Поиск <input name="query" v-model="searchQueryOrder" />
+        </form>
+        <order-grid :orders="Orders"
+                    :columns="GridOrdersCols"
+                    :filter-key="searchQueryOrder">
+        </order-grid>
+    </div>
+</div>
+<script type="text/x-template" id="alertmodal-template">
+    <template v-if="customerPanelVue.showModalAlert">
+        <transition name="modal">
+            <div class="modal-mask">
+                <div class="modal-wrapper">
+                    <div class="modal-container">
+                        <div class="modal-header">
+                            <slot name="header">
+                                <h5 class="modal-title text-center">Server response</h5>
+                                <button type="button" class="close" v-on:click="Close()" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </slot>
+                        </div>
+                        <div class="modal-body">
+                            <slot name="body">
+                                <h3 v-bind:class="stl">{{msg}}</h3>
+                            </slot>
+                        </div>
+                        <div class="modal-footer">
+                            <slot name="footer">
+                                <button class="modal-default-button" v-on:click="Close()">
+                                    OK
+                                </button>
+                            </slot>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </transition>
+    </template>
+</script>
 <script type="text/x-template" id="items-template">
     <table>
         <thead>
@@ -48,62 +130,5 @@
         </tbody>
     </table>
 </script>
-<div id="customerPanelVue">
-    <div class="btn-group" role="group">
-        <button type="button" v-on:click="ShowMyOrders()" class="btn btn-secondary">Мои заказы</button>
-        <button type="button" v-on:click="GetItemList()" class="btn btn-secondary">Список товаров</button>
-        <button type="button" v-on:click="GetMyCase()" class="btn btn-secondary">Корзина</button>
-    </div>
-    <div style="margin-top: .4em;" class="row">
-        <div style="margin-top: .2em" class="col-md-8">
-            <dfn>Товары</dfn>
-            <item-grid :items="Items"
-                       :columns="GridItemsCols"
-                       :filter-key="searchQuery">
-            </item-grid>
-        </div>
-        <div class="col-md-offset-1 col-md-3">
-            <div class="card">
-                <div class="card-header">
-                    Корзина
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li v-for="(item, CaseItems) in CaseItems" class="list-group-item">
-                        {{item.Name}} price: {{item.Price}}$
-                    </li>
-                </ul>
-                <div class="card-body">
-                    <button type="button" class="card-link" v-on:click="CreateOrder()">Заказать</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div style="margin-top: .2em">
-        <dfn>Заказы</dfn>
-        <order-grid :orders="Orders"
-                    :columns="GridOrdersCols"
-                    :filter-key="searchQuery">
-        </order-grid>
-    </div>
-    <div class="modal" id="alertModal" tabindex="-1" role="dialog" aria-labelledby="alertModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title text-center" id="alertModalLabel">Server response</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <h4 v-bind:class="[alertClass]" class="text-center">
-                        {{alertMsg}}
-                    </h4>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <script type="text/javascript" src="~/Scripts/Vue/CustomerPanelVue.js"></script>
+<script type="text/javascript" src="~/Scripts/Vue/CustomerPanelModalVue.js"></script>
